# Scanning-Crypto-

./: README.md  index.html
.github/workflows/: deploy.yml
assets/: index-BaPXUvzN.js  index-h5we0wAY.css
backend/: Cargo.toml
backend/src/: main.rs
backend/src/database/: db.rs
backend/src/models/: score.rs
backend/src/resources/: bookmark.rs
backend/src/routers/: coins.rs  mod.rs
backend/src/services/: coingecko.rs  mod.rs  scoring.rs
backend/src/store/: mod.rs  screener.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CoinTable.jsx  ScoreCard.jsx  ScoreChart.jsx  ShariahBadge.jsx  Sidebar.jsx  WatchlistPanel.jsx
frontend/src/lib/: api.js  theme.js
frontend/src/pages/: CoinDetail.jsx  Dashboard.jsx  Screener.jsx  Watchlist.jsx
