[package]
name = "backend-cekHalal-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["future"]}
reqwest = { version = "0.13.4", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"]}
tower-http = { version = "0.7.0", features = ["cors"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}